--- a/index.html
+++ b/index.html
@@ -5,17 +5,16 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1> Situs Asyfa Achmad untuk pelatihan TIK</h1>
   <div class="kartu-profil">
-  <img src="me.jpg" alt="Foto profil saya">
-<p> Selamat datang di situs uji coba pelatihan TIK 2025 oleh Asyfa Achmad
+  <img src="me.jpeg" alt="Foto profil saya">
+  <h1> Situs Asyfa Achmad untuk pelatihan TIK</h1>
+  <p> Selamat datang di situs uji coba pelatihan TIK 2025 oleh Asyfa Achmad
   <br> dari SMA Negeri 1 Tempeh Lumajang
-</p>
-  
-<p>
+  </p>
+  <p>
     <a href="https://www.instagram.com/oetamads">@oetamads</a>
     <button id="sapabutton">Yuk kenalan di IG</button>
-</p>
+  </p>
   </div>
   <script src="script.js"></script>
 </body>
