--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </p>
   <p>
     <a href="https://www.instagram.com/oetamads">@oetamads</a>
-    <button id="sapabutton">Yuk kenalan di IG</button>
+    <button id="sapaButton">Yuk kenalan di IG</button>
   </p>
   </div>
   <script src="script.js"></script>
